@@ -45,6 +45,7 @@ int get_connection2(int socket_type,int gc_listening_socket);
 //int get_connection2(int socket_type);
 int sock_write(int sockfd, const char *buf, size_t count);
 int sock_read(int sockfd, void *buf, size_t count);
+bool sock_datawaiting(int sockfd);
 int sock_gets(int sockfd, char *str, size_t count);
 int sock_puts(int sockfd, const char *str);
 
